--- a/Milestone_p4.ipynb
+++ b/Milestone_p4.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,9 +22,148 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area_id</th>\n",
+       "      <th>Unemployment Rate (%)</th>\n",
+       "      <th>Fatal road casualties</th>\n",
+       "      <th>Serious road casualties</th>\n",
+       "      <th>Slight road casualties</th>\n",
+       "      <th>Mean Annual Household Income estimate (£)</th>\n",
+       "      <th>Median Annual Household Income estimate (£)</th>\n",
+       "      <th>No Qualification(%)</th>\n",
+       "      <th>High Qualification(%)</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>E01000907</td>\n",
+       "      <td>9.874826</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>39985.100588</td>\n",
+       "      <td>30222.708219</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>44.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>E01000908</td>\n",
+       "      <td>8.043217</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42393.697668</td>\n",
+       "      <td>32049.045061</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>50.4</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>E01000909</td>\n",
+       "      <td>4.853273</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>77369.830951</td>\n",
+       "      <td>58468.946630</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>61.9</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>E01000912</td>\n",
+       "      <td>8.844340</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>41737.141713</td>\n",
+       "      <td>31551.206573</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>47.2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>E01000913</td>\n",
+       "      <td>2.076843</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>96648.892842</td>\n",
+       "      <td>73024.451961</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>65.2</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     area_id  Unemployment Rate (%)  Fatal road casualties  \\\n",
+       "0  E01000907               9.874826                      0   \n",
+       "1  E01000908               8.043217                      0   \n",
+       "2  E01000909               4.853273                      0   \n",
+       "3  E01000912               8.844340                      0   \n",
+       "4  E01000913               2.076843                      0   \n",
+       "\n",
+       "   Serious road casualties  Slight road casualties  \\\n",
+       "0                        0                       1   \n",
+       "1                        0                       0   \n",
+       "2                        0                       1   \n",
+       "3                        2                      10   \n",
+       "4                        0                       2   \n",
+       "\n",
+       "   Mean Annual Household Income estimate (£)  \\\n",
+       "0                               39985.100588   \n",
+       "1                               42393.697668   \n",
+       "2                               77369.830951   \n",
+       "3                               41737.141713   \n",
+       "4                               96648.892842   \n",
+       "\n",
+       "   Median Annual Household Income estimate (£)  No Qualification(%)  \\\n",
+       "0                                 30222.708219                 20.0   \n",
+       "1                                 32049.045061                 15.0   \n",
+       "2                                 58468.946630                  9.6   \n",
+       "3                                 31551.206573                 18.0   \n",
+       "4                                 73024.451961                  4.9   \n",
+       "\n",
+       "   High Qualification(%)  \n",
+       "0                   44.2  \n",
+       "1                   50.4  \n",
+       "2                   61.9  \n",
+       "3                   47.2  \n",
+       "4                   65.2  "
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#importing data\n",
     "data_folder = './Tesco Grocery/'\n",
@@ -54,9 +193,230 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>area_id</th>\n",
+       "      <th>Unemployment Rate (%)</th>\n",
+       "      <th>Fatal road casualties</th>\n",
+       "      <th>Serious road casualties</th>\n",
+       "      <th>Slight road casualties</th>\n",
+       "      <th>Mean Annual Household Income estimate (£)</th>\n",
+       "      <th>Median Annual Household Income estimate (£)</th>\n",
+       "      <th>No Qualification(%)</th>\n",
+       "      <th>High Qualification(%)</th>\n",
+       "      <th>weight</th>\n",
+       "      <th>...</th>\n",
+       "      <th>man_day</th>\n",
+       "      <th>population</th>\n",
+       "      <th>male</th>\n",
+       "      <th>female</th>\n",
+       "      <th>age_0_17</th>\n",
+       "      <th>age_18_64</th>\n",
+       "      <th>age_65+</th>\n",
+       "      <th>avg_age</th>\n",
+       "      <th>area_sq_km</th>\n",
+       "      <th>people_per_sq_km</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>E01000907</td>\n",
+       "      <td>9.874826</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>39985.100588</td>\n",
+       "      <td>30222.708219</td>\n",
+       "      <td>20.0</td>\n",
+       "      <td>44.2</td>\n",
+       "      <td>382.253521</td>\n",
+       "      <td>...</td>\n",
+       "      <td>5364</td>\n",
+       "      <td>1548.0</td>\n",
+       "      <td>748.0</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>380.0</td>\n",
+       "      <td>985.0</td>\n",
+       "      <td>183.0</td>\n",
+       "      <td>37.177003</td>\n",
+       "      <td>0.11</td>\n",
+       "      <td>14440.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>E01000908</td>\n",
+       "      <td>8.043217</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>42393.697668</td>\n",
+       "      <td>32049.045061</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>50.4</td>\n",
+       "      <td>337.678784</td>\n",
+       "      <td>...</td>\n",
+       "      <td>14960</td>\n",
+       "      <td>1732.0</td>\n",
+       "      <td>800.0</td>\n",
+       "      <td>932.0</td>\n",
+       "      <td>402.0</td>\n",
+       "      <td>1059.0</td>\n",
+       "      <td>271.0</td>\n",
+       "      <td>39.207275</td>\n",
+       "      <td>0.18</td>\n",
+       "      <td>9897.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>E01000909</td>\n",
+       "      <td>4.853273</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>77369.830951</td>\n",
+       "      <td>58468.946630</td>\n",
+       "      <td>9.6</td>\n",
+       "      <td>61.9</td>\n",
+       "      <td>326.405957</td>\n",
+       "      <td>...</td>\n",
+       "      <td>15098</td>\n",
+       "      <td>1741.0</td>\n",
+       "      <td>795.0</td>\n",
+       "      <td>946.0</td>\n",
+       "      <td>322.0</td>\n",
+       "      <td>1064.0</td>\n",
+       "      <td>355.0</td>\n",
+       "      <td>42.018955</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>7616.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>E01000912</td>\n",
+       "      <td>8.844340</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>10</td>\n",
+       "      <td>41737.141713</td>\n",
+       "      <td>31551.206573</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>47.2</td>\n",
+       "      <td>361.636211</td>\n",
+       "      <td>...</td>\n",
+       "      <td>3960</td>\n",
+       "      <td>1791.0</td>\n",
+       "      <td>811.0</td>\n",
+       "      <td>980.0</td>\n",
+       "      <td>344.0</td>\n",
+       "      <td>1203.0</td>\n",
+       "      <td>244.0</td>\n",
+       "      <td>38.209380</td>\n",
+       "      <td>0.90</td>\n",
+       "      <td>1999.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>E01000913</td>\n",
+       "      <td>2.076843</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>2</td>\n",
+       "      <td>96648.892842</td>\n",
+       "      <td>73024.451961</td>\n",
+       "      <td>4.9</td>\n",
+       "      <td>65.2</td>\n",
+       "      <td>326.822017</td>\n",
+       "      <td>...</td>\n",
+       "      <td>13821</td>\n",
+       "      <td>1850.0</td>\n",
+       "      <td>891.0</td>\n",
+       "      <td>959.0</td>\n",
+       "      <td>393.0</td>\n",
+       "      <td>998.0</td>\n",
+       "      <td>459.0</td>\n",
+       "      <td>43.141081</td>\n",
+       "      <td>1.62</td>\n",
+       "      <td>1144.0</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>5 rows × 210 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "     area_id  Unemployment Rate (%)  Fatal road casualties  \\\n",
+       "0  E01000907               9.874826                      0   \n",
+       "1  E01000908               8.043217                      0   \n",
+       "2  E01000909               4.853273                      0   \n",
+       "3  E01000912               8.844340                      0   \n",
+       "4  E01000913               2.076843                      0   \n",
+       "\n",
+       "   Serious road casualties  Slight road casualties  \\\n",
+       "0                        0                       1   \n",
+       "1                        0                       0   \n",
+       "2                        0                       1   \n",
+       "3                        2                      10   \n",
+       "4                        0                       2   \n",
+       "\n",
+       "   Mean Annual Household Income estimate (£)  \\\n",
+       "0                               39985.100588   \n",
+       "1                               42393.697668   \n",
+       "2                               77369.830951   \n",
+       "3                               41737.141713   \n",
+       "4                               96648.892842   \n",
+       "\n",
+       "   Median Annual Household Income estimate (£)  No Qualification(%)  \\\n",
+       "0                                 30222.708219                 20.0   \n",
+       "1                                 32049.045061                 15.0   \n",
+       "2                                 58468.946630                  9.6   \n",
+       "3                                 31551.206573                 18.0   \n",
+       "4                                 73024.451961                  4.9   \n",
+       "\n",
+       "   High Qualification(%)      weight  ...  man_day  population   male  female  \\\n",
+       "0                   44.2  382.253521  ...     5364      1548.0  748.0   800.0   \n",
+       "1                   50.4  337.678784  ...    14960      1732.0  800.0   932.0   \n",
+       "2                   61.9  326.405957  ...    15098      1741.0  795.0   946.0   \n",
+       "3                   47.2  361.636211  ...     3960      1791.0  811.0   980.0   \n",
+       "4                   65.2  326.822017  ...    13821      1850.0  891.0   959.0   \n",
+       "\n",
+       "   age_0_17  age_18_64  age_65+    avg_age  area_sq_km  people_per_sq_km  \n",
+       "0     380.0      985.0    183.0  37.177003        0.11           14440.0  \n",
+       "1     402.0     1059.0    271.0  39.207275        0.18            9897.0  \n",
+       "2     322.0     1064.0    355.0  42.018955        0.23            7616.0  \n",
+       "3     344.0     1203.0    244.0  38.209380        0.90            1999.0  \n",
+       "4     393.0      998.0    459.0  43.141081        1.62            1144.0  \n",
+       "\n",
+       "[5 rows x 210 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "#merging datas\n",
     "df = pd.merge(indicators,Tesco_lsoa,on='area_id')\n",
@@ -260,20 +620,6 @@
     "plot.set_xticklabels(results.Indicators,rotation=90)\n",
     "plt.show()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
