--- a/Milestone_p4.ipynb
+++ b/Milestone_p4.ipynb
@@ -288,10 +288,13 @@
     "indicators=pd.DataFrame({\n",
     "    'area_id':lsoa_data_2[('Unnamed: 0_level_0', 'Unnamed: 0_level_1', 'Codes')],\n",
     "    'Unemployment Rate (%)':lsoa_data_2[('Economic Activity', 'Unemployment Rate', 2011)],\n",
-    "    'Mean Annual Household Income estimate (£)':lsoa_data_2[('Household Income, 2011/12', 'Mean Annual Household Income estimate (£)', 'Unnamed: 72_level_2')],\n",
-    "    'Median Annual Household Income estimate (£)':lsoa_data_2[('Household Income, 2011/12', 'Median Annual Household Income estimate (£)', 'Unnamed: 73_level_2')],\n",
+    "    'Mean Annual Household Income estimate (£)':lsoa_data_2[('Household Income, 2011/12', \\\n",
+    "        'Mean Annual Household Income estimate (£)', 'Unnamed: 72_level_2')],\n",
+    "    'Median Annual Household Income estimate (£)':lsoa_data_2[('Household Income, 2011/12', \\\n",
+    "        'Median Annual Household Income estimate (£)', 'Unnamed: 73_level_2')],\n",
     "    'No Qualification(%)':lsoa_data_2[('Qualifications', '% No qualifications', 2011)],\n",
-    "    'High Qualification(%)':lsoa_data_2[('Qualifications', '% Highest level of qualification: Level 4 qualifications and above', 2011)]\n",
+    "    'High Qualification(%)':lsoa_data_2[('Qualifications', \\\n",
+    "         '% Highest level of qualification: Level 4 qualifications and above', 2011)]\n",
     "})\n",
     "\n",
     "indicators"
@@ -1139,8 +1142,10 @@
     }
    ],
    "source": [
-    "id_indicators=['Unemployment Rate (%)','Mean Annual Household Income estimate (£)','Median Annual Household Income estimate (£)','No Qualification(%)','High Qualification(%)']\n",
-    "nutriments=['energy_sugar','energy_fat','energy_alcohol',\"energy_saturate\",'energy_carb','energy_tot','energy_protein','energy_fibre']\n",
+    "id_indicators=['Unemployment Rate (%)','Mean Annual Household Income estimate (£)',\\\n",
+    "               'Median Annual Household Income estimate (£)','No Qualification(%)','High Qualification(%)']\n",
+    "nutriments=['energy_sugar','energy_fat','energy_alcohol',\"energy_saturate\",'energy_carb',\\\n",
+    "            'energy_tot','energy_protein','energy_fibre']\n",
     "R=[]\n",
     "P=[]\n",
     "\n",
@@ -1221,7 +1226,8 @@
     "\n",
     "for j in nutriments:\n",
     "    for i in id_indicators:\n",
-    "        plot=sns.scatterplot(ax=axs[nutriments.index(j),id_indicators.index(i)],x=i,y=j,data=df_representativ,color=CB_color_cycle[nutriments.index(j)])\n",
+    "        plot=sns.scatterplot(ax=axs[nutriments.index(j),id_indicators.index(i)],x=i,\\\n",
+    "                             y=j,data=df_representativ,color=CB_color_cycle[nutriments.index(j)])\n",
     "        plot.set(xlabel=None)\n",
     "        axs[nutriments.index(j),id_indicators.index(i)].set_title(i)"
    ]
@@ -1248,8 +1254,7 @@
     "R_representativeness=[]\n",
     "P_representativeness=[]\n",
     "for i in id_indicators:\n",
-    "    r= stats.spearmanr(df_representativ['representativeness_norm'],df_representativ[i],nan_policy='omit')[0]\n",
-    "    p= stats.spearmanr(df_representativ['representativeness_norm'],df_representativ[i],nan_policy='omit')[1]\n",
+    "    [r,p] = stats.spearmanr(df_representativ['representativeness_norm'],df_representativ[i],nan_policy='omit')\n",
     "    R_representativeness.append(r)\n",
     "    P_representativeness.append(p)\n",
     "    \n",
@@ -1258,7 +1263,9 @@
     "\n",
     "#Exemple of observable correlation\n",
     "if plotlyCompute:\n",
-    "    fig = px.scatter(df_representativ, x='High Qualification(%)',y='energy_sugar',title='Figure 2 - Example of obversable correlation',color_discrete_sequence=[\"#5f5291\"],trendline='ols', trendline_color_override=\"#d27d86\")\n",
+    "    fig = px.scatter(df_representativ, x='High Qualification(%)',y='energy_sugar',\\\n",
+    "                     title='Figure 2 - Example of obversable correlation',color_discrete_sequence=[\"#5f5291\"],\\\n",
+    "                     trendline='ols', trendline_color_override=\"#d27d86\")\n",
     "    fig.show()\n",
     "    fig.write_html('scatter.html')\n",
     "else:\n",
@@ -1336,10 +1343,13 @@
     "indicators=pd.DataFrame({\n",
     "    'area_id':lsoa_data_2[('Unnamed: 0_level_0', 'Unnamed: 0_level_1', 'Codes')],\n",
     "    'Unemployment Rate (%)':lsoa_data_2[('Economic Activity', 'Unemployment Rate', 2011)],\n",
-    "    'Mean Annual Household Income estimate (£)':lsoa_data_2[('Household Income, 2011/12', 'Mean Annual Household Income estimate (£)', 'Unnamed: 72_level_2')],\n",
-    "    'Median Annual Household Income estimate (£)':lsoa_data_2[('Household Income, 2011/12', 'Median Annual Household Income estimate (£)', 'Unnamed: 73_level_2')],\n",
+    "    'Mean Annual Household Income estimate (£)':lsoa_data_2[('Household Income, 2011/12',\\\n",
+    "        'Mean Annual Household Income estimate (£)', 'Unnamed: 72_level_2')],\n",
+    "    'Median Annual Household Income estimate (£)':lsoa_data_2[('Household Income, 2011/12',\\\n",
+    "        'Median Annual Household Income estimate (£)', 'Unnamed: 73_level_2')],\n",
     "    'No Qualification(%)':lsoa_data_2[('Qualifications', '% No qualifications', 2011)],\n",
-    "    'High Qualification(%)':lsoa_data_2[('Qualifications', '% Highest level of qualification: Level 4 qualifications and above', 2011)]\n",
+    "    'High Qualification(%)':lsoa_data_2[('Qualifications',\\\n",
+    "        '% Highest level of qualification: Level 4 qualifications and above', 2011)]\n",
     "})\n",
     "\n",
     "#Merging data\n",
@@ -1451,7 +1461,8 @@
     "    df = px.data.tips()\n",
     "    fig = px.histogram(df_rp, x=df_rp.perc_sugar,width=400, height=300, color_discrete_sequence=[\"#d27d86\"])\n",
     "    fig.add_vline(x=0.05,line_color='#5f5291')\n",
-    "    fig.add_vrect(x0=0.05,x1=0,fillcolor='#5f5291',opacity=0.25,line_width=0,annotation_text='rec.',annotation_position='top')\n",
+    "    fig.add_vrect(x0=0.05,x1=0,fillcolor='#5f5291',opacity=0.25,line_width=0,annotation_text='rec.',\\\n",
+    "                  annotation_position='top')\n",
     "    fig.update_layout(\n",
     "        margin=dict(l=0, r=10, t=10, b=0),\n",
     "    )\n",
@@ -1462,7 +1473,8 @@
     "    df = px.data.tips()\n",
     "    fig = px.histogram(df_rp, x=df_rp.perc_fat,width=400, height=300, color_discrete_sequence=[\"#d27d86\"])\n",
     "    fig.add_vline(x=0.3,line_color='#5f5291')\n",
-    "    fig.add_vrect(x0=0.3,x1=0.17,fillcolor='#5f5291',opacity=0.25,line_width=0,annotation_text='recommandation',annotation_position='top')\n",
+    "    fig.add_vrect(x0=0.3,x1=0.17,fillcolor='#5f5291',opacity=0.25,line_width=0,\\\n",
+    "                  annotation_text='recommandation',annotation_position='top')\n",
     "    fig.update_layout(\n",
     "        margin=dict(l=0, r=10, t=10, b=0),\n",
     "    )\n",
@@ -1473,7 +1485,8 @@
     "    df = px.data.tips()\n",
     "    fig = px.histogram(df_rp, x=df_rp.perc_saturate,width=400, height=300, color_discrete_sequence=[\"#d27d86\"])\n",
     "    fig.add_vline(x=0.1,line_color='#5f5291')\n",
-    "    fig.add_vrect(x0=0.1,x1=0,fillcolor='#5f5291',opacity=0.25,line_width=0,annotation_text='recommandation',annotation_position='top')\n",
+    "    fig.add_vrect(x0=0.1,x1=0,fillcolor='#5f5291',opacity=0.25,line_width=0,annotation_text='recommandation',\\\n",
+    "                  annotation_position='top')\n",
     "    fig.update_layout(\n",
     "        margin=dict(l=0, r=10, t=10, b=0),\n",
     "    )\n",
@@ -1494,7 +1507,8 @@
     "    df = px.data.tips()\n",
     "    fig = px.histogram(df_rp, x=df_rp.perc_fibre,width=400, height=300, color_discrete_sequence=[\"#d27d86\"])\n",
     "    fig.add_vline(x=0.03,line_color='#5f5291')\n",
-    "    fig.add_vrect(x0=0.03,x1=0.04,fillcolor='#5f5291',opacity=0.25,line_width=0,annotation_text='recommandation',annotation_position='top')\n",
+    "    fig.add_vrect(x0=0.03,x1=0.04,fillcolor='#5f5291',opacity=0.25,line_width=0,\\\n",
+    "                  annotation_text='recommandation',annotation_position='top')\n",
     "    fig.update_layout(\n",
     "        margin=dict(l=0, r=10, t=10, b=0),\n",
     "    )\n",
@@ -1560,7 +1574,8 @@
     "analyze = 'fat'\n",
     "\n",
     "if plotlyCompute:\n",
-    "    fig = px.choropleth(df_rp, geojson=lsoaJSON, locations=df_rp.area_id, color=df_rp[analyze+'_omsScore'], color_continuous_scale=\"Burg\")\n",
+    "    fig = px.choropleth(df_rp, geojson=lsoaJSON, locations=df_rp.area_id, \\\n",
+    "                        color=df_rp[analyze+'_omsScore'], color_continuous_scale=\"Burg\")\n",
     "    fig.update_layout(margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0})\n",
     "    fig.update_traces(marker_line_width=0)\n",
     "    fig.update_geos(fitbounds=\"locations\", visible=False)\n",
@@ -1595,10 +1610,12 @@
     }
    ],
    "source": [
-    "average_score = 1/6*(df_rp.protein_omsScore+df_rp.sugar_omsScore+df_rp.fat_omsScore+df_rp.saturate_omsScore+df_rp.carb_omsScore+df_rp.fibre_omsScore)\n",
+    "average_score = 1/6*(df_rp.protein_omsScore+df_rp.sugar_omsScore+df_rp.fat_omsScore+\\\n",
+    "                     df_rp.saturate_omsScore+df_rp.carb_omsScore+df_rp.fibre_omsScore)\n",
     "\n",
     "if plotlyCompute:\n",
-    "    fig = px.choropleth(df_rp, geojson=lsoaJSON, locations=df_rp.area_id, color=average_score, color_continuous_scale=\"Burg\")\n",
+    "    fig = px.choropleth(df_rp, geojson=lsoaJSON, locations=df_rp.area_id, \\\n",
+    "                        color=average_score, color_continuous_scale=\"Burg\")\n",
     "    fig.update_layout(margin={\"r\":0,\"t\":0,\"l\":0,\"b\":0})\n",
     "    fig.update_traces(marker_line_width=0)\n",
     "    fig.update_geos(fitbounds=\"locations\", visible=False)\n",
@@ -1630,8 +1647,7 @@
     }
    ],
    "source": [
-    "r= stats.spearmanr(df_rp['Mean Annual Household Income estimate (£)'],average_score,nan_policy='omit')[0]\n",
-    "p= stats.spearmanr(df_rp['Mean Annual Household Income estimate (£)'],average_score,nan_policy='omit')[1]\n",
+    "[r,p]= stats.spearmanr(df_rp['Mean Annual Household Income estimate (£)'],average_score,nan_policy='omit')\n",
     "print(r,p)"
    ]
   },
@@ -1666,22 +1682,28 @@
     }
    ],
    "source": [
-    "scores = [df_rp.protein_omsScore, df_rp.sugar_omsScore, df_rp.fat_omsScore, df_rp.saturate_omsScore, df_rp.carb_omsScore, df_rp.fibre_omsScore]\n",
+    "scores = [df_rp.protein_omsScore, df_rp.sugar_omsScore, df_rp.fat_omsScore, \\\n",
+    "          df_rp.saturate_omsScore, df_rp.carb_omsScore, df_rp.fibre_omsScore]\n",
     "names = ['protein', 'sugar', 'fat', 'saturate', 'carb', 'fiber']\n",
-    "factors = ['Unemployment Rate (%)','Mean Annual Household Income estimate (£)','No Qualification(%)','High Qualification(%)']\n",
+    "factors = ['Unemployment Rate (%)','Mean Annual Household Income estimate (£)',\\\n",
+    "           'No Qualification(%)','High Qualification(%)']\n",
     "fac = ['Un','Mean','No','High']\n",
+    "\n",
+    "#our indexes\n",
     "stuff = [0,1,2,3,4,5]\n",
     "\n",
+    "#to create combinations\n",
     "def powerset(iterable):\n",
     "    s = list(iterable)  # allows duplicate elements\n",
     "    return chain.from_iterable(combinations(s, r) for r in range(1,len(s)+1))\n",
     "\n",
-    "\n",
+    "#loop over every factor\n",
     "for j,factor in enumerate(factors,1):\n",
     "    combos = []\n",
     "    scoreP = []\n",
     "    scoreR = []\n",
-    "\n",
+    "    \n",
+    "    #loop over every combination and compute score\n",
     "    for i, combo in enumerate(powerset(stuff), 1):\n",
     "        comboList = list(combo)\n",
     "        average = 0\n",
@@ -1705,7 +1727,8 @@
     "    df2 = df2.drop(['index'], axis=1)\n",
     "    \n",
     "    if plotlyCompute:\n",
-    "        fig = px.bar(df2, x=\"R\", y =\"combo\", orientation='h',color =np.abs(df2['R']), color_continuous_scale=\"Burg\",width=400, height=400)\n",
+    "        fig = px.bar(df2, x=\"R\", y =\"combo\", orientation='h',color =np.abs(df2['R']),\\\n",
+    "                     color_continuous_scale=\"Burg\",width=400, height=400)\n",
     "        fig.update_layout(title_text=factor,\n",
     "            margin=dict(l=0, r=10, t=35, b=0),\n",
     "        )\n",
@@ -1746,7 +1769,8 @@
     "average_score.describe()\n",
     "\n",
     "\n",
-    "id_indicators=['Unemployment Rate (%)','Mean Annual Household Income estimate (£)','No Qualification(%)','High Qualification(%)']\n",
+    "id_indicators=['Unemployment Rate (%)','Mean Annual Household Income estimate (£)',\\\n",
+    "               'No Qualification(%)','High Qualification(%)']\n",
     "fac = ['Un','Mean','No','High']\n",
     "x = np.arange(0, 1, 0.1)\n",
     "R, P = [], []\n",
@@ -1777,7 +1801,8 @@
     "                       'P': resultsP[i],\n",
     "                        'limit': line})\n",
     "    if plotlyCompute:\n",
-    "        fig = px.line(df, x=np.arange(0, 1, 0.1),y=['R','P','limit'],width=400, height=300, color_discrete_sequence=[\"#d27d86\",'#5f5291','red'])\n",
+    "        fig = px.line(df, x=np.arange(0, 1, 0.1),y=['R','P','limit'],width=400, height=300,\\\n",
+    "                      color_discrete_sequence=[\"#d27d86\",'#5f5291','red'])\n",
     "        fig.update_layout(title_text=name,\n",
     "                        margin=dict(l=0, r=0, t=35, b=0),\n",
     "                        legend_title_text=''\n",
