code clean-up bis

--- a/Milestone_p4.ipynb
+++ b/Milestone_p4.ipynb
@@ -56,8 +56,6 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "from score import *\n",
-    "\n",
     "init_notebook_mode(connected=True)"
    ]
   },
@@ -1388,7 +1386,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Are Londonners respecting the WoH recommendations ? \n",
+    "## Are Londonners respecting the WHO recommendations ? \n",
     "\n",
     "We will study 6 different types of nutrients intake\n",
     "- fat energy\n",
@@ -1522,7 +1520,157 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Compute a WoH related score for each area "
+    "## Compute a WHO related score for each area "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Scoring functions"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Create % Columns to be able to compare with OMS\n",
+    "def add_perc_column(nutrient, df) : \n",
+    "    \n",
+    "    # Name of energy column \n",
+    "    energy = 'energy_' + nutrient  \n",
+    "    \n",
+    "    # Name of new column \n",
+    "    name = 'perc_' + nutrient\n",
+    "    \n",
+    "    # Create new column \n",
+    "    df.loc[:,name] = df.loc[:, energy] / df.energy_tot\n",
+    "        \n",
+    "# Get the outliers \n",
+    "def get_outliers(nutrient, std_treshold, df) : \n",
+    "    \n",
+    "    '''\n",
+    "    Imput : tresh ( treshold on standard dev  ) \n",
+    "    Nutrient - string \n",
+    "    OMS_recom - dict \n",
+    "    df - dataframe \n",
+    "    '''     \n",
+    "    \n",
+    "    # Name of column \n",
+    "    energy = 'energy_' + nutrient\n",
+    "    \n",
+    "    # Mean and std across areas \n",
+    "    mean_nutrient = df[energy].describe()[1]\n",
+    "    std_nutrient = df[energy].describe()[2]  \n",
+    "    \n",
+    "    outliers_left = df[energy].apply(lambda x: x < (mean_nutrient - std_treshold * std_nutrient))\n",
+    "    outliers_right = df[energy].apply(lambda x: x > (mean_nutrient + std_treshold * std_nutrient))\n",
+    "    \n",
+    "    return outliers_left, outliers_right\n",
+    "\n",
+    "\n",
+    "# Outliers needs to have a score as well \n",
+    "\n",
+    "def assign_outliers_score(nutrient, OMS_recom, df) : \n",
+    "    \n",
+    "    '''\n",
+    "    recom_type \n",
+    "    'less' : when the recomandation is to eat less of that nutrient \n",
+    "    'more' : when the recomandation is to eat more of that nutrient  \n",
+    "    '''\n",
+    "    # Define outlier treshold\n",
+    "    std_treshold = 2\n",
+    "    \n",
+    "    # Creating array of scores \n",
+    "    name = nutrient + '_omsScore'\n",
+    "    energy = 'energy_' + nutrient\n",
+    "    perc_col = 'perc_' + nutrient\n",
+    "    df.loc[:, name] = -1 \n",
+    "    \n",
+    "    # Get outliers\n",
+    "    outliers_left, outliers_right = get_outliers(nutrient, std_treshold, df)\n",
+    "    \n",
+    "    # Transform nutrient energy into %\n",
+    "    perc_left  = df.loc[outliers_left,  energy] / df.loc[outliers_left,  'energy_tot']\n",
+    "    perc_right = df.loc[outliers_right, energy] / df.loc[outliers_right, 'energy_tot']\n",
+    "    \n",
+    "    if OMS_recom[0] == 'less_than' :\n",
+    "        df.loc[outliers_left,  name] = perc_left.apply(lambda x : 0 if \\\n",
+    "                                                       x < OMS_recom[1] else -1)\n",
+    "        df.loc[outliers_right, name] = 1\n",
+    "        \n",
+    "    elif OMS_recom[0] == 'more_than' :\n",
+    "        df.loc[outliers_right, name] = perc_right.apply(lambda x : 0 if \\\n",
+    "                                                        x > OMS_recom[1] else -1)\n",
+    "        df.loc[outliers_left,  name] = 1 \n",
+    "        \n",
+    "    elif OMS_recom[0] == 'around' :\n",
+    "        \n",
+    "        # Min and Max amongst non-outliers areas  \n",
+    "        outliers = outliers_left | outliers_right\n",
+    "        mini = df.loc[~outliers, perc_col].describe()[3]\n",
+    "        maxi = df.loc[~outliers, perc_col].describe()[7]\n",
+    "        \n",
+    "        # Define what is the worst case \n",
+    "        worst_case = max(abs(OMS_recom[1]-mini), abs(OMS_recom[1]-maxi))   \n",
+    "        df.loc[outliers, name] = perc_right.apply(lambda x : 1 if \\\n",
+    "                                                  abs(x-OMS_recom[1]) > worst_case else -1)\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "def set_scores(nutrient, OMS_val, df) : \n",
+    "    \n",
+    "    '''\n",
+    "    Imput : x ( pourcentage ) \n",
+    "    Nutrient - string \n",
+    "    OMS_recom - dict \n",
+    "    df - dataframe \n",
+    "    '''\n",
+    "    \n",
+    "    # Outliers treshhold \n",
+    "    tresh = 2\n",
+    "    \n",
+    "    # Names of columns \n",
+    "    energy = 'energy_' + nutrient\n",
+    "    oms_score_col = nutrient + '_omsScore'\n",
+    "    minmax_col = nutrient + '_minmax'\n",
+    "    perc_col = 'perc_' + nutrient\n",
+    "    \n",
+    "    # Get outliers \n",
+    "    outliers_left, outliers_right = get_outliers(nutrient, tresh, df)\n",
+    "    outliers = outliers_left | outliers_right\n",
+    "\n",
+    "    # Get min max after removing outliers \n",
+    "    mean = df.loc[~outliers, perc_col].describe()[1]\n",
+    "    mini = df.loc[~outliers, perc_col].describe()[3]\n",
+    "    maxi = df.loc[~outliers, perc_col].describe()[7]    \n",
+    "    \n",
+    "    # Surpasses the recommendations \n",
+    "    if(mini>OMS_val) : \n",
+    "        df.loc[~outliers, oms_score_col] = df.loc[~outliers, perc_col].apply(\\\n",
+    "                                             lambda x : (x-OMS_val)/(maxi-OMS_val))\n",
+    "        df.loc[outliers, oms_score_col]  = df.loc[outliers,  perc_col].apply(\\\n",
+    "                                             lambda x : (x-OMS_val)/(maxi-OMS_val) \\\n",
+    "                                             if (x>OMS_val and x<mini) else x)\n",
+    "    # Under the recommendations \n",
+    "    elif(maxi<OMS_val) : \n",
+    "        df.loc[~outliers, oms_score_col] = df.loc[~outliers, perc_col].apply(\\\n",
+    "                                             lambda x : (OMS_val-x)/(OMS_val-mini))\n",
+    "        df.loc[outliers,  oms_score_col] = df.loc[outliers,  perc_col].apply(\\\n",
+    "                                             lambda x : (OMS_val-x)/(OMS_val-mini) \\\n",
+    "                                             if (x<OMS_val and x>maxi) else x)\n",
+    "    # Recomendations in between\n",
+    "    elif(maxi>OMS_val and mini<OMS_val) :\n",
+    "        worst_case = max(abs(OMS_val-mini), abs(OMS_val-maxi)) \n",
+    "        \n",
+    "        df.loc[~outliers, oms_score_col] = df.loc[~outliers, perc_col].apply(\\\n",
+    "                                             lambda x : abs(OMS_val-x)/worst_case)      \n",
+    "        df.loc[outliers,  oms_score_col] = df.loc[outliers,  perc_col].apply(\\\n",
+    "                                             lambda x : abs(OMS_val-x)/worst_case \\\n",
+    "                                             if abs(x-OMS_val) < worst_case else x) \n",
+    "        "
    ]
   },
   {
